--- a/index.html
+++ b/index.html
@@ -284,11 +284,7 @@
                                             </button>
                                             <div class="collapse" id="collapse5">
                                                 <div class="card card-body">
-                                                    <p>Gained hands on experience working in their state-of-the-art 3D
-                                                        Printing facility, which focuses on creating devices for medical
-                                                        applications such as prosthetics.
-                                                        Produced multiple medical devices, which are still currently
-                                                        being used to assist Doctors there.
+                                                    <p>Assembled a prototype account management system that maintains balance information of all customer accounts, processes transactions, generates monthly reports, and updates accounts with monthly interest. It features a simulated ATM application for customers and an interface for Bank employees.
                                                     </p>
                                                 </div>
                                             </div>
@@ -319,11 +315,7 @@
                                             </button>
                                             <div class="collapse" id="collapse6">
                                                 <div class="card card-body">
-                                                    <p>Gained hands on experience working in their state-of-the-art 3D
-                                                        Printing facility, which focuses on creating devices for medical
-                                                        applications such as prosthetics.
-                                                        Produced multiple medical devices, which are still currently
-                                                        being used to assist Doctors there.
+                                                    <p>Developed a functional cross-platform Rideshare app for college students with two other Computer Science students. 
                                                     </p>
                                                 </div>
                                             </div>
@@ -462,10 +454,6 @@
                                             <p class="date">Oct 2016 - Jan 2019</p>
                                     </div>
                                 </div>
-
-
-
-
 
 
 
