--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                                 <button
                                                     onclick="window.location.href = 'https://github.com/Mgla96/OceanRecoveryLabScripts'"
                                                     type="button" class="btn btn-outline-dark ">
-                                                    View
+                                                    View on <i class="fab fa-github"></i>
                                                 </button>
                                             </div>
 
