--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">-->
 </head>
 
 <body>
