--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                         <div class="image">
                                             <figure
                                                 class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width ">
-                                                <img src="css/images/coral-tomoe-steineck.jpg"
+                                                <img src="css/images/oceanrecovery.JPG"
                                                     class="mbr-figure__img rounded img-fluid" alt="Card 1" title="Card 1">
                                             </figure>
                                         </div>
@@ -168,9 +168,8 @@
                                         </div>
 
                                         <h3 class="">Multiplayer Simulation Game</h3>
-                                        <h6 class="styled position">Back-End Software Engineer</h4>
-                                            <p class="software">Software: MySQL, Sequelize, Express.js, Node.js, MVC
-                                                API</p>
+                                        <h6 class="styled position">Software Engineer</h4>
+                                            <p class="software">Software: MySQL, Sequelize, Express.js, Node.js</p>
                                             <div class="separator"></div>
                                             <button class="btn btn-outline-dark" type="button" data-toggle="collapse"
                                                 data-target="#collapse2" aria-expanded="false"
@@ -500,8 +499,6 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    
-    <script src="https://unpkg.com/ionicons@4.4.4/dist/ionicons.js"></script>
 
     <script type="text/javascript">
         window.onload = function () {
