--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
                                         <h3 class="">Multiplayer Simulation Game</h3>
                                         <h6 class="styled position">Software Engineer</h4>
-                                            <p class="software">Software: MySQL, Sequelize, Express.js, Node.js</p>
+                                            <p class="software">Software: MySQL, Express.js, Node.js</p>
                                             <div class="separator"></div>
                                             <button class="btn btn-outline-dark" type="button" data-toggle="collapse"
                                                 data-target="#collapse2" aria-expanded="false"
@@ -297,7 +297,7 @@
                                         <div class="image">
                                             <figure
                                                 class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
-                                                <img src="css/images/placeholder.png"
+                                                <img src="css/images/React_Native_Logo.png"
                                                     class="mbr-figure__img rounded img-fluid" alt="Card 2" title="Card 2">
                                             </figure>
                                         </div>
@@ -511,21 +511,21 @@
                     {
                         breakpoint: 768,
                         options: {
-                            maxParticles: 300,
+                            maxParticles: 220,
                             color: '#ffdf00',
                             connectParticles: false
                         }
                     }, {
                         breakpoint: 425,
                         options: {
-                            maxParticles: 150,
+                            maxParticles: 130,
                             connectParticles: false,
                             color: '#ffdf00'
                         }
                     }, {
                         breakpoint: 320,
                         options: {
-                            maxParticles: 70,
+                            maxParticles: 60,
                             connectParticles: false,
                             color: '#ffdf00'
                         }
