--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
                                     <div class="collapse" id="collapse3">
                                         <div class="card card-body">
                                             <p>Designed and developed the website and ecommerce platform for a
-                                                startup called LocNes.</p>
+                                                startup called LocNes. This website is on standby ready to go live once further manufacturing progress is made</p>
                                             <p class="date">Mar 2019 - Jan 2020</p>
                                         </div>
                                         <button onclick="window.location.href = 'https://findlocnes.com'" type="button"
                                             class="btn btn-outline-dark ">
-                                            View at findlocnes.com</i>
+                                            findlocnes.com</i>
                                         </button>
                                     </div>
                                 </div>
