--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                             <p class="date">Jan 2020 - Apr 2020</p>
                                         </div>
                                         <button
-                                            onclick="window.location.href = 'https://github.com/Mgla96/OceanRecoveryLabScripts'"
+                                            onclick="window.location.href = 'https://github.com/Mgla96/HappyCows'"
                                             type="button" class="btn btn-outline-dark ">
                                             View on <i class="fab fa-github"></i>
                                         </button>
