--- a/resume.html
+++ b/resume.html
@@ -81,7 +81,8 @@
     <div>
         <div class="container card-section bg-white main-raised">
             <div class="card-block container-fluid" id="resume">
-                <div class="embed-responsive embed-responsive-1by1">
+                <!--embed-responsive embed-responsive-1by1 -->
+                <div class="iframe-container">
                     <iframe class="embed-responsive-item resumecontainer" src="resume.pdf"></iframe>
                 </div>
             </div>
