--- a/resume.html
+++ b/resume.html
@@ -80,12 +80,12 @@
     </div>
     <div>
         <div class="container card-section bg-white main-raised">
-            <div class="container-fluid" style="padding-top:25px;" id="resume"> 
+            
                 <!--iframe-container embed-responsive embed-responsive-1by1 -->
-                <div class="embed-responsive embed-responsive-1by1" id="resume">
+                <div class="embed-responsive embed-responsive-1by1" style="padding-top:25px;" id="resume">
                     <iframe class="embed-responsive-item resumecontainer" src="resume.pdf"></iframe>
                 </div>
-            </div> 
+            
         </div>
     </div>
     </div>
