--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
         </div>
     </div>
     <div>
-        <div class="container card-section bg-white main-raised">
+        <div class="container card-section bg-white main-raiser">
             <div class="card-block mb30" id="projects">
                 <div class="p-3 mb-5 rounded">
                     <div class="section-title mb-0 text-center">
