--- a/resume.html
+++ b/resume.html
@@ -79,13 +79,15 @@
         </div>
     </div>
     <div>
-        <div class="container card-section bg-white main-raiser">
-            <div style="padding-top:4%; padding-left: 2%; padding-right:2%; padding-bottom:4%"> 
+        <!--<div class="container card-section bg-white main-raiser"> -->
+            <div class="card-section main-raiser bg-white"> 
+                <div class="card-block">
                 <div class="embed-responsive embed-responsive-1by1" id="resume">
                     <iframe class="embed-responsive-item resumecontainer" src="resume.pdf"></iframe>
                 </div>
+                </div>
             </div> 
-        </div>
+        <!--</div>-->
     </div>
     </div>
     </div>
