--- a/resume.html
+++ b/resume.html
@@ -79,15 +79,15 @@
         </div>
     </div>
     <div>
-        <!--<div class="container card-section bg-white main-raiser"> -->
-            <div class="card-section main-raiser bg-white"> 
+            <div class="container card-section main-raiser bg-white"> 
                 <div class="card-block">
-                <div class="embed-responsive embed-responsive-1by1" id="resume">
-                    <iframe class="embed-responsive-item resumecontainer" src="resume.pdf"></iframe>
-                </div>
+                    <!--embed-responsive embed-responsive-1by1-->
+                    <div class="embed-responsive embed-responsive-1by1" id="resume">
+                       <!-- <iframe class="embed-responsive-item resumecontainer" src="resume.pdf"></iframe>-->
+                        <iframe class="embed-responsive-item" src="resume.pdf#zoom=50" height="100%" width="100%"></iframe>
+                    </div>
                 </div>
             </div> 
-        <!--</div>-->
     </div>
     </div>
     </div>
