--- a/about.html
+++ b/about.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || []; w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        }); var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-KXVKCFG');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <title>Matt Gottlieb</title>
     <link rel="stylesheet" href="css/style.css">
@@ -17,6 +27,11 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KXVKCFG" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <!--navbar -->
     <nav class="navbar navbar-light bg-light shadow fixed-top navbar-expand-lg">
         <div class="container">
@@ -70,7 +85,7 @@
                             <h1 class="page-title">Hi! Welcome to my portfolio</h1>
                         </div>
                         <div data-aos="fade-up" data-aos-duration="2500">
-                            <h4 class="lead page-title">This website is still under construction</h4>
+                            <h4 class="lead page-title">About Me</h4>
                         </div>
                     </div>
 
@@ -83,7 +98,7 @@
             <div class="card-block mb30" id="projects">
                 <div class="p-3 mb-5 rounded">
                     <div class="section-title mb-0 text-center">
-                        <h3>Projects & Work Experience</h3>
+                        <h3>About Me</h3>
                     </div>
 
                     <div class="mt-5 container text-center">
@@ -94,7 +109,8 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width ">
                                             <img src="css/images/oceanrecovery.JPG"
-                                                class="mbr-figure__img rounded img-fluid" alt="Card 1" title="Ocean Recovery Lab">
+                                                class="mbr-figure__img rounded img-fluid" alt="Card 1"
+                                                title="Ocean Recovery Lab">
                                         </figure>
                                     </div>
                                     <h3 class="styled">Ocean Recovery Lab</h3>
@@ -129,8 +145,8 @@
                                     <div class="image">
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
-                                            <img src="css/images/cowtemp.png"
-                                                class="mbr-figure__img rounded img-fluid" alt="Multiplayer Simulation Game" title="Multiplayer Simulation Game">
+                                            <img src="css/images/cowtemp.png" class="mbr-figure__img rounded img-fluid"
+                                                alt="Multiplayer Simulation Game" title="Multiplayer Simulation Game">
                                         </figure>
                                     </div>
 
@@ -153,8 +169,7 @@
                                                 Barbara as an interactive learning tool for his students.</p>
                                             <p class="date">Jan 2020 - Apr 2020</p>
                                         </div>
-                                        <button
-                                            onclick="window.location.href = 'https://github.com/Mgla96/HappyCows'"
+                                        <button onclick="window.location.href = 'https://github.com/Mgla96/HappyCows'"
                                             type="button" class="btn btn-outline-dark ">
                                             View on <i class="fab fa-github"></i>
                                         </button>
@@ -183,7 +198,8 @@
                                     <div class="collapse" id="collapse3">
                                         <div class="card card-body">
                                             <p>Designed and developed the website and ecommerce platform for a
-                                                startup called LocNes. This website is on standby ready to go live once further manufacturing progress is made</p>
+                                                startup called LocNes. This website is on standby ready to go live once
+                                                further manufacturing progress is made</p>
                                             <p class="date">Mar 2019 - Jan 2020</p>
                                         </div>
                                         <button onclick="window.location.href = 'https://findlocnes.com'" type="button"
@@ -200,7 +216,8 @@
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
                                             <img src="css/images/walterreed.png"
-                                                class="mbr-figure__img rounded img-fluid" alt="Walter Reed" title="Walter Reed">
+                                                class="mbr-figure__img rounded img-fluid" alt="Walter Reed"
+                                                title="Walter Reed">
                                         </figure>
                                     </div>
                                     <h3 class="">Walter Reed National Military Medical Center</h3>
@@ -230,8 +247,8 @@
                                     <div class="image">
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
-                                            <img src="css/images/java3.jpg"
-                                                class="mbr-figure__img rounded img-fluid" alt="Card 2" title="Card 2">
+                                            <img src="css/images/java3.jpg" class="mbr-figure__img rounded img-fluid"
+                                                alt="Card 2" title="Card 2">
                                         </figure>
                                     </div>
                                     <h3 class="">Bank Database & ATM Interface</h3>
@@ -408,7 +425,7 @@
             </div>
         </div>
     </div>
-   
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
