--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                     <div class="collapse" id="collapse3">
                                         <div class="card card-body">
                                             <p>Designed and developed the website and ecommerce platform for a
-                                                startup called LocNes. This website is on standby ready to go live once
+                                                startup called LocNes. This website is on standy and is ready to publish once
                                                 further manufacturing progress is made</p>
                                             <p class="date">Mar 2019 - Jan 2020</p>
                                         </div>
