--- a/resume.html
+++ b/resume.html
@@ -89,7 +89,7 @@
     <div>
         <div class="container card-section main-raiser bg-white"
             style="padding-top:1%; padding-bottom:1%; padding-left: 1%; padding-right: 1%;">
-            <div class="embed-responsive embed-responsive-1by1" id="resume">
+            <div class="embed-responsive embed-responsive-1by1" id="resume" style='padding-bottom:50%'>
                 <iframe class="embed-responsive-item" src="resume.pdf" height="100%" width="100%"></iframe>
             </div>
             <div class="card-block">
