--- a/resume.html
+++ b/resume.html
@@ -89,9 +89,12 @@
     <div>
         <div class="container card-section main-raiser bg-white"
             style="padding-top:1%; padding-bottom:1%; padding-left: 1%; padding-right: 1%;">
+            <embed src="resume.pdf#view=FitH" width="100%" height="1000px" >
+                <!--
             <div class="embed-responsive embed-responsive-1by1" id="resume">
                 <iframe class="embed-responsive-item" src="resume.pdf#view=FitH" ></iframe>
             </div>
+            -->
             <div class="card-block">
                 <a>or you can download <a href="/resume.pdf" download>here</a>. </a>
             </div>
