--- a/resume.html
+++ b/resume.html
@@ -90,7 +90,7 @@
         <div class="container card-section main-raiser bg-white"
             style="padding-top:1%; padding-bottom:1%; padding-left: 1%; padding-right: 1%;">
             <div class="embed-responsive embed-responsive-1by1" id="resume">
-                <iframe class="embed-responsive-item" src="resume.pdf#view=Fit" ></iframe>
+                <iframe class="embed-responsive-item" src="resume.pdf#zoom=50" ></iframe>
             </div>
             
             <div class="card-block">
