--- a/resume.html
+++ b/resume.html
@@ -68,7 +68,6 @@
             </div>
         </div>
     </nav>
-
     <div class="header-photo main" id="home">
         <canvas class="background"></canvas>
         <div class="container">
@@ -87,10 +86,11 @@
         </div>
     </div>
     <div>
+         
         <div class="container card-section main-raiser bg-white"
             style="padding-top:1%; padding-bottom:1%; padding-left: 1%; padding-right: 1%;">
             <div class="embed-responsive embed-responsive-1by1" id="resume">
-                <iframe class="embed-responsive-item" src="resume.pdf#zoom=50" ></iframe>
+                <iframe class="embed-responsive-item" src="resume.pdf#view=FitH" width="700" height="880" ></iframe>
             </div>
             
             <div class="card-block">
