--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,6 @@
 </head>
 
 <body>
-
     <!--navbar -->
     <nav class="navbar navbar-light bg-light shadow fixed-top navbar-expand-lg">
         <div class="container">
@@ -68,7 +67,6 @@
             </div>
         </div>
     </nav>
-    
     <div class="header-photo main" id="home">
         <canvas class="background"></canvas>
         <div class="container">
@@ -91,9 +89,8 @@
         <div class="container card-section main-raiser bg-white"
             style="padding-top:1%; padding-bottom:1%; padding-left: 1%; padding-right: 1%;">
             <div class="embed-responsive embed-responsive-1by1" id="resume">
-                <iframe class="embed-responsive-item" src="resume.pdf#view=FitH" width="700" height="880" ></iframe>
+                <iframe class="embed-responsive-item" src="resume.pdf?#zoom=50"  ></iframe>
             </div>
-            
             <div class="card-block">
                 <a>or you can download <a href="/resume.pdf" download>here</a>. </a>
             </div>
