--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="resume.html#resume">
+                        <a class="nav-link" href="resume.pdf">
                             <ion-icon style="margin-right: 5px" name="document"></ion-icon>Resume
                         </a>
                     </li>
