--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                                     </button>
                                     <div class="collapse" id="collapse7">
                                         <div class="card card-body">
-                                            <p>Developed Linux Operating System in C for CS170 class at UCSB
+                                            <p>Developed a Linux Operating System in C for CS170-Operating Systems class at UCSB.
                                             </p>
                                             <p class="date">Sep 2019 - Dec 2019</p>
                                         </div>
