updated happy cow site

--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
                                                 alt="Card 2" title="Card 2">
                                         </figure>
                                     </div>
-
                                     <h3 class="">Multiplayer Simulation Game</h3>
                                     <h6 class="styled position">Software Engineer</h6>
                                     <p class="software">Software: MySQL, Express.js, Node.js</p>
@@ -173,6 +172,10 @@
                                         <button onclick="window.location.href = 'https://github.com/Mgla96/HappyCows'"
                                             type="button" class="btn btn-outline-dark ">
                                             View on <i class="fab fa-github"></i>
+                                        </button>
+                                        <button onclick="window.location.href = 'https://chem123.chem.ucsb.edu/'"
+                                            type="button" class="btn btn-outline-dark ">
+                                            Game Found Here</i>
                                         </button>
                                     </div>
                                 </div>
