--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                     </button>
                                     <div class="collapse" id="collapse4">
                                         <div class="card card-body">
-                                            <p>This program predicts determines the sentiment of a review and predicts whether it is a positive or negative review. I implemented a Multinomial Naive Bayes model with Bag-Of-Words and Stop Words. Multinomial Naive Bayes was implemented using log probabilities to eliminate the issue of underflow that results from large amounts of unique words used with Bag-Of-Words for the Naive Bayes model.</p>
+                                            <p>This program determines the sentiment of a review and predicts whether it is a positive or negative review. I implemented a Multinomial Naive Bayes model with Bag-Of-Words and Stop Words. Multinomial Naive Bayes was implemented using log probabilities to eliminate the issue of underflow that results from large amounts of unique words used with Bag-Of-Words for the Naive Bayes model.</p>
                                             <p class="date">May 2020</p>
                                         </div>
                                         <button onclick="window.location.href = ''"
