--- a/index.html
+++ b/index.html
@@ -203,10 +203,11 @@
                                     </button>
                                     <div class="collapse" id="collapse3">
                                         <div class="card card-body">
-                                            <p>After training this program with a dataset of articles written by different authors it can predict which of these authors has written an anonymous articles with ~80% accuracy. This program utilizes Multinomial Naive Bayes Multi Classisification with a bag-of-words representation of the text. I also implemented bigrams and trigrams to further improve my accuracy. The accuracy could be further improved by implementing other features such as article length, using stop words, incorporating lemmatization, adding tf-idf weighting, and optimizing current weighting of unigram,bigram,and trigrams. Further accuracy improvements could potentially be seen by using a word to vector approach which would allow us to implement different machine learning models altogether such as a Support Vector Machines or Neural Networks.</p>
+                                            <p>After training this program with a dataset of articles written by different authors it can predict which of these authors has written an anonymous articles. This program utilizes Multinomial Naive Bayes Multi Classisification with a bag-of-words representation of the text. I implemented bigrams and trigrams as well as used the nltk library to incorporate lemmetization as methods to further improve my accuracy.
+                                                The accuracy could be further improved by implementing other features such as article length, using stop words, adding tf-idf weighting, and optimizing current weighting of unigram,bigram,and trigrams. Further accuracy improvements could potentially be seen by using a word to vector approach which would allow us to implement different machine learning models altogether such as a Support Vector Machines or Neural Networks.</p>
                                             <p class="date">May 2020</p>
                                         </div>
-                                        <button onclick="window.location.href = ''"
+                                        <button onclick="window.location.href = 'https://github.com/Mgla96/AuthorPredictor'"
                                             type="button" class="btn btn-outline-dark ">
                                             View on <i class="fab fa-github"></i>
                                         </button>
