--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
                                     </button>
                                     <div class="collapse" id="collapse1">
                                         <div class="card card-body">
-                                            <p>Created an AI to play Gomoku, otherwise known as Five in a Row. Gomoku is like tic-tac-toe except with larger game boards and the requirement of 5 of the same type of stones(a player's game piece) in a row to win. This AI uses the Minimax algorithm with Alpha-Beta Pruning and an optimized method of searching in order to determine the best move relatively quickly.  </p>
+                                            <p>Created an AI to play Gomoku, otherwise known as Five in a Row. Gomoku is like tic-tac-toe except with larger game boards and the requirement of 5 of the same type of stone(a player's game piece) in a row to win. This AI uses the Minimax algorithm with Alpha-Beta Pruning and an optimized method of searching in order to determine the best move relatively quickly.  </p>
                                             <p class="date">Jun 2020</p>
                                         </div>
                                         <button
-                                            onclick="window.location.href = ''"
+                                            onclick="window.location.href = 'https://github.com/Mgla96/GomokuAI'"
                                             type="button" class="btn btn-outline-dark ">
                                             View on <i class="fab fa-github"></i>
                                         </button>
@@ -176,7 +176,7 @@
                                             <p class="date">May 2020</p>
                                         </div>
                                         <button
-                                            onclick="window.location.href = ''"
+                                            onclick="window.location.href = 'https://github.com/Mgla96/DiabeticRetinopothy'"
                                             type="button" class="btn btn-outline-dark ">
                                             View on <i class="fab fa-github"></i>
                                         </button>
@@ -237,7 +237,7 @@
                                             <p>This program determines the sentiment of a review and predicts whether it is a positive or negative review. I implemented a Multinomial Naive Bayes model with Bag-Of-Words and Stop Words. Multinomial Naive Bayes was implemented using log probabilities to eliminate the issue of underflow that results from large amounts of unique words used with Bag-Of-Words for the Naive Bayes model.</p>
                                             <p class="date">May 2020</p>
                                         </div>
-                                        <button onclick="window.location.href = ''"
+                                        <button onclick="window.location.href = 'https://github.com/Mgla96/SentimentAnalysis'"
                                             type="button" class="btn btn-outline-dark ">
                                             View on <i class="fab fa-github"></i>
                                         </button>
@@ -269,7 +269,7 @@
                                             </p>
                                             <p class="date">Jan 2020 - Apr 2020</p>
                                         </div>
-                                        <button onclick="window.location.href = ''"
+                                        <button onclick="window.location.href = 'https://github.com/Mgla96/3ClassLinearClassifier'"
                                             type="button" class="btn btn-outline-dark ">
                                             View on <i class="fab fa-github"></i>
                                         </button>
