--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                     </button>
                                     <div class="collapse" id="collapse1">
                                         <div class="card card-body">
-                                            <p>Created an AI to play Gomoku, otherwise known as Five in a Row. Gomoku is like tic-tac-toe except with larger game boards and the requirement of 5 of the same type of stone(a player's game piece) in a row to win. This AI uses the Minimax algorithm with Alpha-Beta Pruning and an optimized method of searching in order to determine the best move relatively quickly.  </p>
+                                            <p style="text-align: left;">Created an AI to play Gomoku, otherwise known as Five in a Row. Gomoku is like tic-tac-toe except with larger game boards and the requirement of 5 of the same type of stone(a player's game piece) in a row to win. This AI uses the Minimax algorithm with Alpha-Beta Pruning and an optimized method of searching in order to determine the best move relatively quickly.  </p>
                                             <p class="date">Jun 2020</p>
                                         </div>
                                         <button
@@ -155,7 +155,7 @@
                                     </button>
                                     <div class="collapse" id="collapse2">
                                         <div class="card card-body">
-                                            <p>This program predicts whether a patient has a medical condition known as Diabetic Retinopathy based on both categorical(integer) and continuous(float) features. 
+                                            <p style="text-align: left;">This program predicts whether a patient has a medical condition known as Diabetic Retinopathy based on both categorical(integer) and continuous(float) features. 
                                                 These are the 18 features used below: </br></br>
                                                 0) The binary result of quality assessment. 0 = bad quality 1 = sufficient quality.</br></br>
                                                 1) The binary result of pre-screening, where 1 indicates severe retinal abnormality and 0 its lack.</br></br>
@@ -203,7 +203,7 @@
                                     </button>
                                     <div class="collapse" id="collapse3">
                                         <div class="card card-body">
-                                            <p>After training this program with a dataset of articles written by different authors it can predict which of these authors has written an anonymous articles. This program utilizes Multinomial Naive Bayes Multi Classisification with a bag-of-words representation of the text. I implemented bigrams and trigrams as well as used the nltk library to incorporate lemmetization as methods to further improve my accuracy.
+                                            <p style="text-align: left;">After training this program with a dataset of articles written by different authors it can predict which of these authors has written an anonymous articles. This program utilizes Multinomial Naive Bayes Multi Classisification with a bag-of-words representation of the text. I implemented bigrams and trigrams as well as used the nltk library to incorporate lemmetization as methods to further improve my accuracy.
                                                 The accuracy could be further improved by implementing other features such as article length, using stop words, adding tf-idf weighting, and optimizing current weighting of unigram,bigram,and trigrams. Further accuracy improvements could potentially be seen by using a word to vector approach which would allow us to implement different machine learning models altogether such as a Support Vector Machines or Neural Networks.</p>
                                             <p class="date">May 2020</p>
                                         </div>
@@ -234,7 +234,7 @@
                                     </button>
                                     <div class="collapse" id="collapse4">
                                         <div class="card card-body">
-                                            <p>This program determines the sentiment of a review and predicts whether it is a positive or negative review. I implemented a Multinomial Naive Bayes model with Bag-Of-Words and Stop Words. Multinomial Naive Bayes was implemented using log probabilities to eliminate the issue of underflow that results from large amounts of unique words used with Bag-Of-Words for the Naive Bayes model.</p>
+                                            <p style="text-align: left;">This program determines the sentiment of a review and predicts whether it is a positive or negative review. I implemented a Multinomial Naive Bayes model with Bag-Of-Words and Stop Words. Multinomial Naive Bayes was implemented using log probabilities to eliminate the issue of underflow that results from large amounts of unique words used with Bag-Of-Words for the Naive Bayes model.</p>
                                             <p class="date">May 2020</p>
                                         </div>
                                         <button onclick="window.location.href = 'https://github.com/Mgla96/SentimentAnalysis'"
@@ -264,7 +264,7 @@
                                     </button>
                                     <div class="collapse" id="collapse5">
                                         <div class="card card-body">
-                                            <p>This program is a basic linear classifier for 3 classes. This model is trained by computing the centroid of each class (e.g. A,B, and C) then constructs a discriminant function between each pair of classes
+                                            <p style="text-align: left;">This program is a basic linear classifier for 3 classes. This model is trained by computing the centroid of each class (e.g. A,B, and C) then constructs a discriminant function between each pair of classes
                                                 (e.g A/B, B/C, and A/C), halfway between the two centroids and orthogonal to the line connecting the two centroids. For testing it checks the discriminant function between "A or B" and then depending on that answer, decides "A or C" or "B or C". 
                                             </p>
                                             <p class="date">Jan 2020 - Apr 2020</p>
@@ -299,7 +299,7 @@
                                     </button>
                                     <div class="collapse" id="collapse6">
                                         <div class="card card-body">
-                                            <p>Created scripts to assist researchers at the Ocean Recoveries Lab
+                                            <p style="text-align: left;">Created scripts to assist researchers at the Ocean Recoveries Lab
                                                 at UC
                                                 Santa Barbara, which focuses on preserving and recovering ocean
                                                 ecosystems.
@@ -335,7 +335,7 @@
                                     </button>
                                     <div class="collapse" id="collapse7">
                                         <div class="card card-body">
-                                            <p>Implemented a multiplayer simulation game for Professor de Vries
+                                            <p style="text-align: left;">Implemented a multiplayer simulation game for Professor de Vries
                                                 which
                                                 demonstrates the detrimental effects of unregulated human use of
                                                 shared
@@ -376,7 +376,7 @@
                                     </button>
                                     <div class="collapse" id="collapse8">
                                         <div class="card card-body">
-                                            <p>Designed and developed the website and ecommerce platform for a
+                                            <p style="text-align: left;">Designed and developed the website and ecommerce platform for a
                                                 startup called LocNes. This website is on standy and is ready to publish once
                                                 further manufacturing progress is made</p>
                                             <p class="date">Mar 2019 - Jan 2020</p>
@@ -408,7 +408,7 @@
                                     </button>
                                     <div class="collapse" id="collapse9">
                                         <div class="card card-body">
-                                            <p>Gained hands on experience working in their state-of-the-art 3D
+                                            <p style="text-align: left;">Gained hands on experience working in their state-of-the-art 3D
                                                 Printing facility, which focuses on creating devices for medical
                                                 applications such as prosthetics.
                                                 Produced multiple medical devices, which are still currently
@@ -440,7 +440,7 @@
                                     </button>
                                     <div class="collapse" id="collapse10">
                                         <div class="card card-body">
-                                            <p>Assembled a prototype account management system that maintains balance
+                                            <p style="text-align: left;">Assembled a prototype account management system that maintains balance
                                                 information of all customer accounts, processes transactions, generates
                                                 monthly reports, and updates accounts with monthly interest. It features
                                                 a simulated ATM application for customers and an interface for Bank
@@ -472,7 +472,7 @@
                                     </button>
                                     <div class="collapse" id="collapse11">
                                         <div class="card card-body">
-                                            <p>Developed a functional cross-platform Rideshare app for college students
+                                            <p style="text-align: left;">Developed a functional cross-platform Rideshare app for college students
                                                 with two other Computer Science students.
                                             </p>
                                             <p class="date">Apr 2018 - Jan 2019</p>
@@ -500,7 +500,7 @@
                                     </button>
                                     <div class="collapse" id="collapse12">
                                         <div class="card card-body">
-                                            <p>Developed a Linux Operating System in C for CS170-Operating Systems class at UCSB.
+                                            <p style="text-align: left;">Developed a Linux Operating System in C for CS170-Operating Systems class at UCSB.
                                             </p>
                                             <p class="date">Sep 2019 - Dec 2019</p>
                                         </div>
@@ -527,7 +527,7 @@
                                     </button>
                                     <div class="collapse" id="collapse13">
                                         <div class="card card-body">
-                                            <p>Constructed a custom 3D Printer which uses a Raspberry Pi to
+                                            <p style="text-align: left;">Constructed a custom 3D Printer which uses a Raspberry Pi to
                                                 access the printer over the local network.
                                                 Gained experience with CAD by designing parts for projects made
                                                 with this printer.
@@ -557,7 +557,7 @@
                                     </button>
                                     <div class="collapse" id="collapse14">
                                         <div class="card card-body">
-                                            <p>Built a functional and fast first-person-view quadcopter to
+                                            <p style="text-align: left;">Built a functional and fast first-person-view quadcopter to
                                                 gain a better understanding of how all the software and hardware
                                                 components work together.
                                             </p>
@@ -586,7 +586,7 @@
                                     </button>
                                     <div class="collapse" id="collapse15">
                                         <div class="card card-body">
-                                            <p>Assembled a computer that uses hashing algorithms to process and
+                                            <p style="text-align: left;">Assembled a computer that uses hashing algorithms to process and
                                                 verify transactions between cryptocurrency users as well as
                                                 solve the nonce number for new blocks in the Ethereum
                                                 blockchain. Gained more experience with Hashing algorithms, GPU
