--- a/about.html
+++ b/about.html
@@ -116,13 +116,8 @@
                         <div class="float-left page-caption">
                             <h1 id="ev1">Interests</h1>
                             <p>
-                                Hi there, my name is Matt. I am a Computer Science major at UC Santa Barbara and
-                                graduating
-                                in June 2020. I love exploring new technology and witnessing the merge between science
-                                fiction
-                                and reality. This is what has intrigued my interest in exploring areas such as
-                                3D-printing,
-                                quadcopters, decentralized applications, and machine learning. I am very fortunate to enter a field that I feel so passionate about and am eager
+                                Hi there, my name is Matt. I recently graduated from University of California, Santa Barbara in June 2020 and received a B.S in Computer Science. I love exploring new technology and witnessing the merge between science
+                                fiction and reality. This is what has intrigued my interest in exploring areas such as 3D-printing, quadcopters, decentralized applications, and machine learning. I am very fortunate to enter a field that I feel so passionate about and am eager
                                 to continue developing my skills and gaining experience within the world of software.
                             </p>
                         </div>
@@ -141,7 +136,7 @@
                         <div class="float-right page-caption">
                             <h1 id="ev2">Skills</h1>
                             <p>
-                                The languages I am most proficient in are C++, Python, Javascript,
+                                The languages I am most proficient in are C++, Python, and Javascript. I have experience developing websites, web applications, ... 
                                 Mauris quis vulputate neque. Proin ullamcorper nisi libero. Praesent ac tincidunt est.
                                 Pellentesque convallis tincidunt felis, non dignissim sapien dignissim nec. Donec luctus
                                 ligula ligula, ut
