--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                     <div class="image">
                                         <figure
                                             class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
-                                            <img src="css/images/clark-van-der.jpg" class="mbr-figure__img rounded img-fluid"
+                                            <img src="css/images/linearclassifier.png" class="mbr-figure__img rounded img-fluid"
                                                 alt="Card 2" title="Card 2">
                                         </figure>
                                     </div>
